--- a/src/table/templates/table.html
+++ b/src/table/templates/table.html
@@ -2,7 +2,7 @@
     <!-- ***************** 主表格 start ***************** -->
     <div class="uix-table-container uix-table-main">
         <!-- *****************  表头 start ***************** -->
-        <div class="uix-table-header" ng-style="{width:tableWidth+'px'}" ng-if="fixHead">
+        <div class="uix-table-header" ng-style="{width:tableWidth+'px'}">
             <table class="uix-table">
                 <thead>
                 <tr>
